Home screen ui . Create event screen ui .

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -9,5 +9,28 @@
   "home": "الرئيسية",
   "map": "الخريطة",
   "love": "المفضلة",
-  "profile": "الملف الشخصي"
+  "profile": "الملف الشخصي",
+  "welcome": "مرحباً بك ✨",
+  "all": "الجميع",
+  "book_club": "قراءة",
+  "sport": "رياضة",
+  "birthday": "عيد ميلاد",
+  "meeting": "اجتماع",
+  "eating": "طعام",
+  "gaming": "ألعاب",
+  "holiday": "أجازة",
+  "workshop": "ورشة عمل",
+  "exhibition": "معرض",
+  "create_event": "إنشاء نشاط",
+  "title": "العنوان",
+  "description": "الوصف",
+  "event_title": "عنوان النشاط",
+  "event_description": "وصف النشاط",
+  "event_date": "تاريخ النشاط",
+  "event_time": "وقت النشاط",
+  "choose_date": "اختر التاريخ",
+  "choose_time": "اختر الوقت",
+  "location": "الموقع",
+  "choose_event_location": "اختر موقع النشاط",
+  "add_event": "إنشاء نشاط"
 }
