--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -9,5 +9,28 @@
   "home": "Home",
   "map": "Map",
   "love": "Love",
-  "profile": "Profile"
+  "profile": "Profile",
+  "welcome": "Welcome Back ✨",
+  "all": "All",
+  "book_club": "Book club",
+  "sport": "Sport",
+  "birthday": "Birthday",
+  "meeting": "Meeting",
+  "eating": "Eating",
+  "gaming": "Gaming",
+  "holiday": "Holiday",
+  "workshop": "Workshop",
+  "exhibition": "Exhibition",
+  "create_event": "Create Event",
+  "title": "Title",
+  "description": "Description",
+  "event_title": "Event Title",
+  "event_description": "Event Description",
+  "event_date": "Event Date",
+  "event_time": "Event Time",
+  "choose_date": "Choose Date",
+  "choose_time": "Choose Time",
+  "location": "Location",
+  "choose_event_location": "Choose Event Location",
+  "add_event": "Add Event"
 }
